// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reader.Toc Component renders correctly 1`] = `
<span>
  <div
    className="toc-drawer"
  >
    <div
      className="edge-lock-scroll"
    >
      <div
        className="drawer-reader left"
      >
        <focus-trap-react
          active={false}
          focusTrapOptions={
            Object {
              "clickOutsideDeactivates": true,
              "escapeDeactivates": false,
              "returnFocusOnDeactivate": false,
            }
          }
        >
          <button
            className="screen-reader-text"
            onClick={[Function]}
            tabIndex="0"
          >
            Close
          </button>
          <nav
            aria-label="Table of Contents"
            className="table-of-contents"
          >
            <ol
              className="toc-list"
            >
              <li>
                <a
                  className={null}
                  data-id="hide-drawer"
                  href="/read/slug-1/section/undefined#function anchor() { [native code] }"
                  onClick={[Function]}
                />
              </li>
              <li>
                <a
                  className={null}
                  data-id="hide-drawer"
                  href="/read/slug-1/section/undefined#function anchor() { [native code] }"
                  onClick={[Function]}
                />
              </li>
            </ol>
            <div
              className="toc-footer"
            >
              <button
                className="toc-footer__button"
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="manicon-svg toc-footer__icon svg-icon--info16"
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M8,15 C4.13372014,15 1,11.8662799 1,8 C1,4.13432793 4.13402421,1 8,1 C11.8659758,1 15,4.13432793 15,8 C15,11.8662799 11.8662799,15 8,15 Z M8,14 C11.3139951,14 14,11.3139951 14,8 C14,4.68659099 11.3136693,2 8,2 C4.68633066,2 2,4.68659099 2,8 C2,11.3139951 4.68600489,14 8,14 Z M7.5001,11.4999 L7.5001,7.4999 L8.5001,7.4999 L8.5001,11.4999 L7.5001,11.4999 Z M8.0001,6.4999 C7.44757899,6.4999 7.0001,6.05113489 7.0001,5.49937451 C7.0001,4.94656316 7.44757899,4.4999 8.0001,4.4999 C8.55262101,4.4999 9.0001,4.94656316 9.0001,5.49937451 C9.0001,6.05113489 8.55262101,6.4999 8.0001,6.4999 Z"
                      fill="#9A9A9A"
                      fillRule="nonzero"
                    />
                  </g>
                </svg>
                <h4
                  className="toc-footer__text"
                >
                  About This Text
                </h4>
              </button>
            </div>
          </nav>
        </focus-trap-react>
      </div>
    </div>
  </div>
</span>
`;

exports[`Reader.Toc Component renders correctly with empty toc 1`] = `
<span>
  <div
    className="toc-drawer"
  >
    <div
      className="edge-lock-scroll"
    >
      <div
        className="drawer-reader left"
      >
        <focus-trap-react
          active={false}
          focusTrapOptions={
            Object {
              "clickOutsideDeactivates": true,
              "escapeDeactivates": false,
              "returnFocusOnDeactivate": false,
            }
          }
        >
          <button
            className="screen-reader-text"
            onClick={[Function]}
            tabIndex="0"
          >
            Close
          </button>
          <nav
            aria-label="Table of Contents"
            className="table-of-contents"
          >
            <div
              className="toc-empty"
            >
              This text does not have a table of contents.
            </div>
            <hr />
            <div
              className="toc-footer"
            >
              <button
                className="toc-footer__button"
                onClick={[Function]}
              >
                <svg
                  aria-hidden={true}
                  className="manicon-svg toc-footer__icon svg-icon--info16"
                  height={32}
                  viewBox="0 0 16 16"
                  width={32}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                  >
                    <path
                      d="M8,15 C4.13372014,15 1,11.8662799 1,8 C1,4.13432793 4.13402421,1 8,1 C11.8659758,1 15,4.13432793 15,8 C15,11.8662799 11.8662799,15 8,15 Z M8,14 C11.3139951,14 14,11.3139951 14,8 C14,4.68659099 11.3136693,2 8,2 C4.68633066,2 2,4.68659099 2,8 C2,11.3139951 4.68600489,14 8,14 Z M7.5001,11.4999 L7.5001,7.4999 L8.5001,7.4999 L8.5001,11.4999 L7.5001,11.4999 Z M8.0001,6.4999 C7.44757899,6.4999 7.0001,6.05113489 7.0001,5.49937451 C7.0001,4.94656316 7.44757899,4.4999 8.0001,4.4999 C8.55262101,4.4999 9.0001,4.94656316 9.0001,5.49937451 C9.0001,6.05113489 8.55262101,6.4999 8.0001,6.4999 Z"
                      fill="#9A9A9A"
                      fillRule="nonzero"
                    />
                  </g>
                </svg>
                <h4
                  className="toc-footer__text"
                >
                  About This Text
                </h4>
              </button>
            </div>
          </nav>
        </focus-trap-react>
      </div>
    </div>
  </div>
</span>
`;
